# foxy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
api/: index.py  requirements.txt
