[tool.poetry]
name = "fa-install"
version = "0.1.0"
description = ""
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"

[[tool.poetry.source]]
name = "fontawesome"
url = "https://fa.celsiusnarhwal.dev"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
