[tool.poetry]
name = "foxy"
version = "1.0.0"
description = "A proxy server for Font Awesome's private Python package index"
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.20.0"

[tool.poe.tasks]
dev = { shell = "poetry export -o api/requirements.txt && vercel dev" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
